# KoEd

./: .gitignore  .gitmodules  BuildWin-VS15.bat  GenerateProject.bat  README.md
Source/: CMakeLists.txt  FileParser.h  RegManager.cpp  main.cpp
Source/KoEd-Cl/: CMakeLists.txt  main.cpp
Source/KoEd-Core/: CMakeLists.txt  FileParser.cpp  FileParser.h  RegManager.cpp  RegManager.h
Source/KoEd-GUI/: KoEd-GUI.pro  libraryexplorer.cpp  libraryexplorer.h  mainwindow.cpp  mainwindow.ui  propertyeditor.cpp  propertyeditor.h
